--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -28,6 +28,7 @@
         app:layout_constraintStart_toStartOf="parent">
 
         <ImageButton
+            android:id="@+id/backBtn"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:src="@drawable/back_icon"
@@ -70,6 +71,7 @@
         app:tint="@color/white" />
 
     <ImageButton
+        android:id="@+id/play_pause_btn"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:backgroundTint="@android:color/transparent"
@@ -97,6 +99,7 @@
         android:gravity="end">
 
         <ImageButton
+            android:id="@+id/fullScreen"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:backgroundTint="@android:color/transparent"
